[package]
name = "rusty-booru"
version = "0.2.6"
edition = "2021"
description = "An async Booru client for Rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/booru-rs"
repository = "https://github.com/ajiiisai/booru-rs"
readme = "README.md"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"] }
derive_more = "0.99.17"
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
anyhow = "1.0.71"
itertools = "0.11.0"
derive_is_enum_variant = "0.1.1"
thiserror = "1.0.52"
